add first_photo logic and fix validate it
