# internal/models/ad_models.go
@@ -1,6 +1,7 @@
 package models
 
 import (
+	"github.com/lib/pq"
 	"time"
 
 	"github.com/google/uuid"
@@ -8,10 +9,11 @@ import (
 
 // Ads struct describe ads object.
 type Ads struct {
-	ID        uuid.UUID `db:"id" json:"id"`
-	Name      string    `db:"name" json:"name" validate:"required,lte=200"`
-	About     string    `db:"about" json:"about,omitempty" validate:"required,lte=1000"`
-	Photos    string    `db:"photos" json:"photos,omitempty" validate:"required,lte=300"`
-	Price     uint      `db:"price" json:"price"`
-	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	ID         uuid.UUID      `db:"id" json:"id,omitempty"`
+	Name       string         `db:"name" json:"name" validate:"required,lte=200"`
+	About      string         `db:"about" json:"about,omitempty" validate:"required,lte=1000"`
+	Photos     pq.StringArray `db:"photos" json:"photos,omitempty" validate:"required,lte=3"`
+	Price      uint           `db:"price" json:"price"`
+	CreatedAt  time.Time      `db:"created_at" json:"-"`
+	FirstPhoto string         `db:"first_photo" json:"first_photo"`
 }
